--- a/Kreativan Technology clone/style.css
+++ b/Kreativan Technology clone/style.css
@@ -6,14 +6,38 @@
     background-color: #F2F5FA;
 }
 
+.bluebox {
+    width: 79px;
+    height: 110px;
+    background-color: #005aac;
+}
+
+.whitebox {
+    background-color: #005aac;
+    padding: 40px 0px 30px 20px;
+}
+
 .container {
     display: flex;
+    background-color: #ffffff;
+}
+
+.image {
+    width: 300px;
+    height: 80px;
+    padding: 10px 5px 0px 5px;
+    vertical-align: middle;
+    background-color: #ffffff;
+
 }
 
 
 .navbar ul {
-    overflow: auto;
+    /* overflow: auto; */
     display: inline;
+    padding: 20px;
+    width: 750px;
+    background-color: #ffffff;
 
 }
 
@@ -24,18 +48,47 @@
     float: left;
     margin: 10px;
     list-style-type: none;
-    color: black;
+    background-color: #ffffff;
 
 }
 
 .navbar li a {
     text-decoration: none;
     padding: 10px;
+    color: #0a0a0a;
+    background-color: #ffffff;
+
 
 }
 
 #search {
-    padding: 20px;
+    margin-top: 43px;
+    width: auto;
+    /* border: 2px solid black; */
+    text-align: end;
+    background-color: #ffffff;
+
+}
+
+.regi {
+    width: 180px;
+    height: 55px;
+    font-size: 0.8em;
+    line-height: 2.5;
+    font-weight: bold;
+    padding: 10px 20px 10px 10px;
+    margin: 25px 10px 10px 40px;
+    background-color: #0000FF;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
+
+#anchor {
+    text-decoration: none;
+    margin-left: 12px;
+    background-color: #0000ff;
+    color: #e6eaed;
 }
 
 .headline {
@@ -43,6 +96,7 @@
     font-size: 1cm;
     font-weight: bold;
     padding: 100px;
+    background-color:#ffffff;
 }
 
 .content-1 {
@@ -61,7 +115,7 @@
     display: flex;
     width: 137px;
     height: 73px;
-    padding: 10px 150px 10px 150px;
+    margin: 10px 40px 20px 120px;
     gap: 30px;
     opacity: 0.5;
 
@@ -71,25 +125,46 @@
     width: 672px;
     height: auto;
     background-color: #2f5aa8;
-    margin: 20px 0px 20px 35px;
     border-radius: 10px;
-    z-index: 2;
+    position: relative;
+    top: 50px;
+    left: 70px;
+
 
 }
 
 .box1 {
+    margin-top: 10px;
     background-color: #2f5aa8;
-    padding: 80px;
+    margin-top: 40px;
+    padding: 0px 60px 0px 60px;
     color: white;
+}
 
+.faq {
+    width: 200px;
+    height: 80px;
+    font-size: 20px;
+    letter-spacing: -0.03em;
+    background-color: #2f5aa8;
+    /* border: 2px solid black; */
+    text-align: center;
+    padding: 31px 0px 0px 30px;
+    /* align-items: center; */
+    /* justify-content: end; */
+    /* line-height: 1.25em; */
+    /* margin:  10px 70px ; */
+    /* display: inline-block; */
 }
 
 details {
-    padding: 10px;
+    height: auto;
+    padding: 5px;
     border-radius: 5px;
     color: black;
     cursor: pointer;
     background-color: #2f5aa8;
+    font-size: 16px;
 }
 
 summary {
@@ -109,10 +184,9 @@ summary {
 }
 
 .video {
-    /* z-index: -1; */
-    width: 771px;
-    height: 434px;
-    border-radius: 5px;
+    width: 800px;
+    height: 450px;
+    border-radius: 10px;
 }
 
 #content2 {
@@ -131,7 +205,7 @@ summary {
 .numberfame {
     width: 292px;
     height: 141px;
-    background-color:#ffffff;
+    background-color: #ffffff;
     /* border: 2px solid black; */
 }
 
@@ -139,17 +213,19 @@ summary {
     width: 292px;
     height: 90px;
     text-align: center;
-    background-color:#ffffff;
+    background-color: #ffffff;
     -webkit-text-fill-color: #005aac;
     /* -webkit-text-stroke:transparent; */
     font-size: 80px;
     font-weight: 500;
     letter-spacing: -0.015em;
 }
-.letter{
+
+.letter {
     text-align: center;
-    background-color:#ffffff;
+    background-color: #ffffff;
 }
+
 .blogshead {
     width: 1200px;
     height: 100px;
@@ -159,30 +235,34 @@ summary {
     font-weight: bold;
 
 }
-.blogs{
-    width:1200px ;
+
+.blogs {
+    width: 1200px;
     height: 1139px;
-    background-color: aqua;
+    /* background-color: aqua; */
     margin: 10px 90px 10px 90px;
     display: flex;
     flex-flow: wrap;
-    padding: 5px 45px 5px 45px ;
+    padding: 5px 45px 5px 45px;
     justify-content: space-around;
     align-content: space-around;
 
 }
-.blogbox{
+
+.blogbox {
     width: 349px;
     height: 299px;
     /* border: 2px solid black; */
 }
-.endbox{
+
+.endbox {
     width: 1403px;
     height: auto;
     background-color: #e6eaed;
     padding: 8px 85px 5px 85px;
 }
-.bigbox{
+
+.bigbox {
     width: 1220px;
     height: 526px;
     background-color: #e6eaed;
@@ -191,26 +271,30 @@ summary {
     padding: 20px 30px 0px 30px;
     justify-content: space-between;
 }
-.block{
+
+.block {
     width: 269px;
     height: 345px;
     /* border: 2px solid black; */
     background-color: #e6eaed;
 
-    
+
 }
-#block1{
+
+#block1 {
     text-align: center;
     font-size: 0.8rem;
     line-height: 0.8cm;
 
 }
-#block2{
+
+#block2 {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
 }
-.innerblock{
+
+.innerblock {
     width: 269px;
     height: auto;
     /* border: 2px solid black; */
@@ -218,7 +302,8 @@ summary {
     font-weight: bold;
     background-color: #e6eaed;
 }
-#block3{
+
+#block3 {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -226,7 +311,8 @@ summary {
     font-weight: bold;
 
 }
-#socialblock{
+
+#socialblock {
     margin: 8px;
     list-style: none;
     display: flex;
@@ -234,38 +320,50 @@ summary {
     gap: 1.7em;
     background-color: #e6eaed;
 }
-#color{
+
+#color {
     background-color: #e6eaed;
 }
-#block4{
+
+#block4 {
     height: 407px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
-.line{
+
+.line {
     width: 1403px;
     border: 0.1px solid #00ddda;
 }
-.footernav{
+
+.footernav {
     width: 1200px;
     height: 26px;
     margin: 20px 100px 20px 100px;
     display: flex;
-    /* flex-direction:column; */
-    
+    flex-direction: row;
+
 
 }
-.footernav-left{
-    width:145px;
+
+.footernav-left {
+    width: 145px;
+    margin-right: 50px;
     font-size: .875em;
-    display: inline-block;
-    
+    display: inline;
+    line-height: 1.875em;
+    color: #0a0a0a;
+
 }
-.footernav-right ul {
-    width: 364px;
+
+.footernav-right {
+    width: 1000px;
     height: 26px;
     display: flex;
-    flex-direction: row;
-    /* text-align: right; */
+    justify-content: end;
+    list-style: none;
+    font-size: .875em;
+    line-height: 1.875em;
+    color: #0a0a0a;
 }
