--- a/Kreativan Technology clone/style.css
+++ b/Kreativan Technology clone/style.css
@@ -5,6 +5,9 @@
     font-family: Inter, Arial, Helvetica, sans-serif;
     background-color: #F2F5FA;
 }
+body{
+    /* overflow:hidden; */
+}
 
 .bluebox {
     width: 79px;
@@ -18,8 +21,12 @@
 }
 
 .container {
+    width: 1403px;
     display: flex;
     background-color: #ffffff;
+    position:fixed;
+    z-index: 2;
+    top: 0;
 }
 
 .image {
@@ -36,7 +43,7 @@
     /* overflow: auto; */
     display: inline;
     padding: 20px;
-    width: 750px;
+    width: 700px;
     background-color: #ffffff;
 
 }
@@ -59,6 +66,10 @@
     background-color: #ffffff;
 
 
+}
+
+.navbar li a:hover {
+    color: #2f5aa8;
 }
 
 #search {
@@ -90,13 +101,19 @@
     background-color: #0000ff;
     color: #e6eaed;
 }
+.toggle{
+    display: none;
+}
 
 .headline {
+    width: 100%;
+    height: 400px;
+    margin-top: 110px;
     text-align: center;
-    font-size: 1cm;
+    font-size:2.5rem;
     font-weight: bold;
     padding: 100px;
-    background-color:#ffffff;
+    background-color: #ffffff;
 }
 
 .content-1 {
@@ -113,9 +130,9 @@
 
 .row {
     display: flex;
-    width: 137px;
+    width: 1170px;
     height: 73px;
-    margin: 10px 40px 20px 120px;
+    margin: 10px 110px 90px 110px;
     gap: 30px;
     opacity: 0.5;
 
@@ -150,11 +167,7 @@
     /* border: 2px solid black; */
     text-align: center;
     padding: 31px 0px 0px 30px;
-    /* align-items: center; */
-    /* justify-content: end; */
-    /* line-height: 1.25em; */
-    /* margin:  10px 70px ; */
-    /* display: inline-block; */
+
 }
 
 details {
@@ -215,7 +228,7 @@ summary {
     text-align: center;
     background-color: #ffffff;
     -webkit-text-fill-color: #005aac;
-    /* -webkit-text-stroke:transparent; */
+    -webkit-text-stroke:transparent;
     font-size: 80px;
     font-weight: 500;
     letter-spacing: -0.015em;
@@ -253,6 +266,31 @@ summary {
     width: 349px;
     height: 299px;
     /* border: 2px solid black; */
+    display: flex;
+    align-items: end;
+   
+}
+#blog-LR p{
+    
+    width: 349px;
+    height: 100px;
+    color: white;
+    background-color: #000000b3;
+    text-align:left;
+    font-size: 1.3rem;
+    font-weight: 600;
+    padding: 20px 20px 10px 20px;
+    
+}
+#blog-mid p{
+    width: 349px;
+    height: 150px;
+    color: white;
+    background-color: #000000b3;
+    text-align:left;
+    font-size: 1.3rem;
+    font-weight: 600;
+    padding: 40px 20px 10px 20px;
 }
 
 .endbox {
