--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@
     background-color: #F2F5FA;
 }
 body{
-    /* overflow:hidden; */
+    width:100%;
+    height: 100%;
 }
 
 .bluebox {
@@ -114,6 +115,7 @@ body{
     font-weight: bold;
     padding: 100px;
     background-color: #ffffff;
+    overflow:auto;
 }
 
 .content-1 {
@@ -137,6 +139,11 @@ body{
     opacity: 0.5;
 
 }
+.mainbox{
+    width: auto;
+    height:auto;
+    display: flex;
+}
 
 .box {
     width: 672px;
@@ -145,9 +152,7 @@ body{
     border-radius: 10px;
     position: relative;
     top: 50px;
-    left: 70px;
-
-
+    left: 70px; 
 }
 
 .box1 {
@@ -201,7 +206,17 @@ summary {
     height: 450px;
     border-radius: 10px;
 }
-
+.headline2 {
+    width: 100%;
+    height: auto;
+    margin-top: 50px;
+    text-align: center;
+    font-size:2.3rem;
+    font-weight: bold;
+    padding: 40px;
+    background-color: #ffffff;
+    overflow:auto;
+}
 #content2 {
     background-color: #ffffff;
 }
@@ -219,7 +234,7 @@ summary {
     width: 292px;
     height: 141px;
     background-color: #ffffff;
-    /* border: 2px solid black; */
+    border: 2px solid black;
 }
 
 .num {
@@ -279,7 +294,7 @@ summary {
     text-align:left;
     font-size: 1.3rem;
     font-weight: 600;
-    padding: 20px 20px 10px 20px;
+    padding: 20px 20px 10px 20px; 
     
 }
 #blog-mid p{
@@ -396,7 +411,8 @@ summary {
 }
 
 .footernav-right {
-    width: 1000px;
+    width:auto;
+    margin-left: 650px;
     height: 26px;
     display: flex;
     justify-content: end;
