--- a/style.css
+++ b/style.css
@@ -5,8 +5,9 @@
     font-family: Inter, Arial, Helvetica, sans-serif;
     background-color: #F2F5FA;
 }
-body{
-    width:100%;
+
+body {
+    width: 100%;
     height: 100%;
 }
 
@@ -25,7 +26,7 @@ body{
     width: 1403px;
     display: flex;
     background-color: #ffffff;
-    position:fixed;
+    position: fixed;
     z-index: 2;
     top: 0;
 }
@@ -102,7 +103,8 @@ body{
     background-color: #0000ff;
     color: #e6eaed;
 }
-.toggle{
+
+.toggle {
     display: none;
 }
 
@@ -111,11 +113,11 @@ body{
     height: 400px;
     margin-top: 110px;
     text-align: center;
-    font-size:2.5rem;
+    font-size: 2.5rem;
     font-weight: bold;
     padding: 100px;
     background-color: #ffffff;
-    overflow:auto;
+    overflow: auto;
 }
 
 .content-1 {
@@ -139,9 +141,10 @@ body{
     opacity: 0.5;
 
 }
-.mainbox{
+
+.mainbox {
     width: auto;
-    height:auto;
+    height: auto;
     display: flex;
 }
 
@@ -152,7 +155,7 @@ body{
     border-radius: 10px;
     position: relative;
     top: 50px;
-    left: 70px; 
+    left: 70px;
 }
 
 .box1 {
@@ -206,17 +209,19 @@ summary {
     height: 450px;
     border-radius: 10px;
 }
+
 .headline2 {
     width: 100%;
     height: auto;
     margin-top: 50px;
     text-align: center;
-    font-size:2.3rem;
+    font-size: 2.3rem;
     font-weight: bold;
     padding: 40px;
     background-color: #ffffff;
-    overflow:auto;
+    overflow: auto;
 }
+
 #content2 {
     background-color: #ffffff;
 }
@@ -234,7 +239,7 @@ summary {
     width: 292px;
     height: 141px;
     background-color: #ffffff;
-    border: 2px solid black;
+    /* border: 2px solid black; */
 }
 
 .num {
@@ -243,7 +248,7 @@ summary {
     text-align: center;
     background-color: #ffffff;
     -webkit-text-fill-color: #005aac;
-    -webkit-text-stroke:transparent;
+    -webkit-text-stroke: transparent;
     font-size: 80px;
     font-weight: 500;
     letter-spacing: -0.015em;
@@ -283,26 +288,28 @@ summary {
     /* border: 2px solid black; */
     display: flex;
     align-items: end;
-   
+
 }
-#blog-LR p{
-    
+
+#blog-LR p {
+
     width: 349px;
     height: 100px;
     color: white;
     background-color: #000000b3;
-    text-align:left;
+    text-align: left;
     font-size: 1.3rem;
     font-weight: 600;
-    padding: 20px 20px 10px 20px; 
-    
+    padding: 20px 20px 10px 20px;
+
 }
-#blog-mid p{
+
+#blog-mid p {
     width: 349px;
     height: 150px;
     color: white;
     background-color: #000000b3;
-    text-align:left;
+    text-align: left;
     font-size: 1.3rem;
     font-weight: 600;
     padding: 40px 20px 10px 20px;
@@ -411,7 +418,7 @@ summary {
 }
 
 .footernav-right {
-    width:auto;
+    width: auto;
     margin-left: 650px;
     height: 26px;
     display: flex;
